# psf-zero

./: 01_psf_gate_calibration.ipynb  CITATION.cff  R0-PSF-Zero.py  R0-PSF-Zero　README.md  R0‑PSF‑Zero Transform　Rust.py　  README.md  lib.rs  psf_synthesis.py  pyproject.toml  qgl_compiler.py  whitepaper.md
benchmarks/: run_benchmark.py
examples/: geometric_noise_learner.py
notebooks/: 02_real_device_benchmark_v2.ipynb
